--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.example.ejy77.testex5"
+        applicationId "kr.ac.ajou.paran"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
