--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity android:name="kr.ac.ajou.paran.play.Play">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,9 @@
         </activity>
         <activity
             android:name="kr.ac.ajou.paran.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="kr.ac.ajou.paran.sss.init.Logo"
             android:screenOrientation="portrait" />
     </application>
 
