--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity
             android:name="kr.ac.ajou.paran.sss.init.Logo"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="kr.ac.ajou.paran.sss.init.Developer"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
