making main screen
yet I only made frame of main screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name="kr.ac.ajou.paran.play.activity_login2"
+            android:name="kr.ac.ajou.paran.sss.main.Main"
             android:screenOrientation="portrait" />
     </application>
 
