--- a/openCVLibrary330/build.gradle
+++ b/openCVLibrary330/build.gradle
@@ -7,6 +7,10 @@ android {
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 21
+
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
     }
 
     buildTypes {
