modularization + search time

--- a/c++/OpenCV/OpenCV/OpenCV.vcxproj
+++ b/c++/OpenCV/OpenCV/OpenCV.vcxproj
@@ -152,7 +152,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="cv.cpp" />
+    <ClCompile Include="vision.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="cv.h" />
+    <ClInclude Include="vision.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
