--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -61,7 +63,7 @@
             android:name="kr.ac.ajou.paran.sss.main.function.BulltinBoard"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".util.Camera"
+        <activity android:name=".util.Recognizer"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation"/>
     </application>
