re download vision api

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile project(':openCVLibrary310')
-    compile 'com.google.guava:guava:23.1-jre'
-    // or, for Android:
-    compile 'com.google.guava:guava:23.1-android'
+    compile 'com.google.apis:google-api-services-vision:v1-rev363-1.23.0'
+}
+repositories {
+    mavenCentral()
 }
