--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':openCVLibrary310')
     compile 'com.google.apis:google-api-services-vision:v1-rev363-1.23.0'
+    compile 'com.google.api-client:google-api-client-android:1.20.0' exclude module: 'httpclient'
+    compile 'com.google.http-client:google-http-client-gson:1.20.0' exclude module: 'httpclient'
 }
 repositories {
     mavenCentral()
