--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".subject.SubjectManage"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".main.function.BulltinBoard"
             android:screenOrientation="portrait" />
 
