--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ db.sqlite3
 
 #python delete graduate info
 python/server/graduate/*.txt
+
+android/.idea/misc.xml
+android/build.gradle
+android/openCVLibrary310/build/*
+*.class
+
