--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="kr.ac.ajou.paran.stage.login.Login">
+        <activity android:name=".play.Play">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,6 +37,9 @@
             android:name=".stage.init.Developer"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".stage.login.Login"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".stage.main.Main"
