add recommend layout

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -69,6 +69,10 @@
             android:name=".stage.main.function.timeTable.sub.Constraint"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".stage.main.function.timeTable.sub.Recommend"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".util.Recognizer"
             android:screenOrientation="landscape"
             android:configChanges="keyboardHidden|orientation"/>
